@@ -44,11 +44,7 @@
                 <configuration>
                     <argLine>
                     	${failsafeArgLine}
-                        --add-exports=java.security.jgss/sun.security.jgss=ALL-UNNAMED
-                        --add-exports=java.security.jgss/sun.security.jgss.spi=ALL-UNNAMED
-                        --add-opens=java.security.jgss/sun.security.jgss.krb5=ALL-UNNAMED
-                        --add-exports=java.security.jgss/sun.security.krb5.internal=ALL-UNNAMED
-                        --add-exports=java.security.jgss/sun.security.krb5=ALL-UNNAMED
+                        ${knime.tycho.test.configuration}
                     </argLine>
                 </configuration>
             </plugin>
